base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skiapp-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: skiapp
